crates/ferrum-interfaces/tests/ui/vnext/fail/replay_identity_is_not_deserialize.rs
use ferrum_interfaces::vnext::ReplayIdentity;

fn main() {
    let _: ReplayIdentity = serde_json::from_str("{}").unwrap();
}
